<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<string name="party_share_strings_app_name_txt" xliff:restype="x-UNLIMITED">PartyShare</string>
<string name="party_share_strings_place_holder_content_txt" xliff:restype="x-UNLIMITED">Turn your Xperia™ into a jukebox. Broadcast your party with real-time photo streaming.\nThis is a perfect app to have when you throw a party or go for a drive with friends.\nWith PartyShare, you can create a shared playlist with your friends and stream songs from your Xperia™ to a speaker. You can also upload photos effortlessly in real time.\nInstall PartyShare now and warm up your party!</string>
<string name="party_share_strings_download_button_txt" xliff:restype="x-GENERIC/POPUP/LIST/V">Download</string>
<string name="party_share_strings_err_connect_network_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Connect to network.</string>
<string name="party_share_strings_err_not_installed_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Google Play Store is not installed or disabled.</string>
<string name="party_share_strings_err_coming_soon_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Coming soon. Please try again later.</string>
<string name="party_share_strings_err_multiuser_not_owner_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">This application is only available to the owner of this device.</string>
<string name="party_share_strings_startup_not_set_txt" xliff:restype="x-GENERIC/POPUP/TEXTFIELD/V">&lt;not set&gt;</string>
<string name="party_share_strings_startup_content_txt" xliff:restype="x-UNLIMITED">Share your music and photos with everyone at a party in real time</string>
<string name="party_share_strings_share_app_button_txt" xliff:restype="x-PARTYSHARE/BUTTON/SHAREAPP">Share app</string>
<string name="party_share_strings_new_party_button_txt" xliff:restype="x-GENERIC/ICS/FOOTER/WIDE">Host a party</string>
<string name="party_share_strings_join_party_dialog_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">This party is open to anyone on the same network. All partygoers will be able to see anything you share at the party.</string>
<string name="party_share_strings_join_dialog_button_txt" xliff:restype="x-GENERIC/POPUP/BUTTONNORMAL/V">Join party</string>
<string name="party_share_strings_option_menu_download_setting_txt" xliff:restype="x-GENERIC/ICS/OPTION">Automatic downloads</string>
<string name="party_share_strings_option_menu_sort_photos_txt" xliff:restype="x-GENERIC/ICS/OPTION">Sort photos</string>
<string name="party_share_strings_option_menu_sound_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/LARGE">Sound</string>
<string name="party_share_strings_option_menu_legal_txt" xliff:restype="x-GENERIC/ICS/OPTION">Legal</string>
<string name="party_share_strings_option_menu_music_volume_txt" xliff:restype="x-GENERIC/ICS/OPTION">Music volume</string>
<string name="party_share_strings_change_your_name_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Enter your desired display name</string>
<string name="party_share_strings_setup_party_name_txt" xliff:restype="x-PARTYSHARE/TITLE/PARTYNAME">Party name</string>
<string name="party_share_strings_setup_not_set_txt" xliff:restype="x-GENERIC/POPUP/TEXTFIELD/V">&lt;not set&gt;</string>
<string name="party_share_strings_setup_my_name_txt" xliff:restype="x-PARTYSHARE/TITLE/DISPNAME">My name</string>
<string name="party_share_strings_setup_require_password_txt" xliff:restype="x-PARTYSHARE/CHECKBOX/PASSWORD">Require password to join</string>
<string name="party_share_strings_no_password_dialog_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">No password set. This will allow anyone on the same network to join the party.</string>
<string name="party_share_strings_allow_anyone_to_join_dialog_button_txt" xliff:restype="x-GENERIC/POPUP/BUTTONNORMAL/V">Allow anyone to join</string>
<string name="party_share_strings_member_list_password_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/LARGE">Password</string>
<string name="party_share_strings_member_list_me_host_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/SMALL">Me (Host)</string>
<string name="party_share_strings_member_list_lnvite_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/LARGE">Invite to party</string>
<string name="party_share_strings_member_list_no_guests_txt" xliff:restype="x-UNLIMITED">No one has joined yet</string>
<string name="party_share_strings_member_list_end_party_button_txt" xliff:restype="x-GENERIC/ICS/FOOTER/WIDE">End party</string>
<string name="party_share_strings_popup_menu_person_remove_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">Remove</string>
<string name="party_share_strings_enter_password_txt" xliff:restype="x-UNLIMITED">Enter password</string>
<string name="party_share_strings_leave_party_button_txt" xliff:restype="x-GENERIC/ICS/FOOTER/WIDE">Leave party</string>
<string name="party_share_strings_member_list_me_guest_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/SMALL">Me</string>
<string name="party_share_strings_member_list_host_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/SMALL">Host</string>
<string name="party_share_strings_remove_member_dialog_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Remove %s from the party?</string>
<string name="party_share_strings_remove_dialog_button_txt" xliff:restype="x-GENERIC/POPUP/BUTTONNORMAL/V">Remove</string>
<string name="party_share_strings_remove_toast_txt" xliff:restype="x-GENERIC/TOAST/TEXT">You have been removed from %s.</string>
<string name="party_share_strings_leave_party_dialog_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Would you like to leave the party?</string>
<string name="party_share_strings_leave_party_dialog_button_txt" xliff:restype="x-GENERIC/POPUP/BUTTONNORMAL/V">Leave</string>
<string name="party_share_strings_end_party_dialog_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Would like to end the party?</string>
<string name="party_share_strings_end_party_dialog_button_txt" xliff:restype="x-GENERIC/POPUP/BUTTONNORMAL/V">End party</string>
<string name="party_share_strings_end_party_toast_txt" xliff:restype="x-GENERIC/TOAST/TEXT">The party is over.</string>
<string name="party_share_strings_music_list_shuffle_txt" xliff:restype="x-GENERIC/POPUP/TITLE/V">Shuffle</string>
<string name="party_share_strings_unknown_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/SMALL">unknown</string>
<string name="party_share_strings_music_list_add_by_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/SMALL">added by %s</string>
<string name="party_share_strings_music_list_no_song_txt" xliff:restype="x-UNLIMITED">No songs</string>
<plurals name="party_share_strings_music_list_minute_remaining_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/SMALL">
    
    <item quantity="one">1 minute remaining</item>
    
    <item quantity="other">%d minutes remaining</item>
</plurals>
<string name="party_share_strings_music_list_add_song_txt" xliff:restype="x-GENERIC/ICS/FOOTER/WIDE">Add songs</string>
<string name="party_share_strings_popup_menu_song_remove_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">Remove</string>
<string name="party_share_strings_popup_menu_play_now_txt" xliff:restype="x-GENERIC/POPUP/BUTTONNORMAL/V">Play now</string>
<string name="party_share_strings_popup_menu_play_after_current_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">Play after current</string>
<string name="party_share_strings_music_list_shuffled_toast_txt" xliff:restype="x-GENERIC/TOAST/TEXT">Playlist shuffled.</string>
<string name="party_share_strings_photo_list_slideshow_txt" xliff:restype="x-GENERIC/ICS/HEADER/TITLETIP">Slideshow</string>
<string name="party_share_strings_photo_list_uploaded_txt" xliff:restype="x-ANDROID/LIST/SETTINGS/SMALL">uploaded by %s</string>
<string name="party_share_strings_take_photo_button_txt" xliff:restype="x-GENERIC/ICS/FOOTER">Take photos</string>
<string name="party_share_strings_add_photo_button_txt" xliff:restype="x-GENERIC/ICS/FOOTER">Add photos</string>
<string name="party_share_strings_downloading_photo_dialog_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Downloading photos</string>
<string name="party_share_strings_option_menu_stop_sharing_txt" xliff:restype="x-GENERIC/ICS/OPTION">Stop sharing</string>
<string name="party_share_strings_photo_list_sort_by_txt" xliff:restype="x-GENERIC/POPUP/TITLE/NOICON/V">Sort by</string>
<string name="party_share_strings_date_taken_ascending_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">Date taken (Old to New)</string>
<string name="party_share_strings_date_taken_descending_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">Date taken (New to Old)</string>
<string name="party_share_strings_date_uploaded_ascending_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">Date uploaded (Old to New)</string>
<string name="party_share_strings_date_uploaded_descending_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">Date uploaded (New to Old)</string>
<string name="party_share_strings_photo_list_download_setting_txt" xliff:restype="x-GENERIC/POPUP/TITLE/NOICON/V">Automatic downloads</string>
<string name="party_share_strings_photo_list_auto_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">ON</string>
<string name="party_share_strings_photo_list_manual_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">OFF</string>
<string name="party_share_strings_now_playing_notification_txt" xliff:restype="x-GENERIC/ICS/STATUSBAR/NOTIFICATION/FIRST/V">Now playing: %s</string>
<string name="party_share_strings_left_party_notification_txt" xliff:restype="x-GENERIC/ICS/STATUSBAR/NOTIFICATION/FIRST/V">%s has left the party</string>
<string name="party_share_strings_joined_party_notification_txt" xliff:restype="x-GENERIC/ICS/STATUSBAR/NOTIFICATION/FIRST/V">%s has joined the party</string>
<string name="party_share_strings_end_party_notification_txt" xliff:restype="x-GENERIC/ICS/STATUSBAR/NOTIFICATION/FIRST/V">The party [%s] has ended</string>
<string name="party_share_strings_add_song_notification_txt" xliff:restype="x-GENERIC/ICS/STATUSBAR/NOTIFICATION/FIRST/V">%1$d songs added by %2$s</string>
<string name="party_share_strings_add_photo_notification_txt" xliff:restype="x-GENERIC/ICS/STATUSBAR/NOTIFICATION/FIRST/V">%1$d photos uploaded by %2$s</string>
<string name="party_share_strings_option_menu_help_txt" xliff:restype="x-GENERIC/ICS/OPTION">Help</string>
<string name="party_share_strings_tab_member_txt" xliff:restype="x-GENERIC/ICS/TAB">Partygoers: %d</string>
<string name="party_share_strings_tab_music_txt" xliff:restype="x-MP/NXT/PORTAL/ITEM/ROW2">Music</string>
<string name="party_share_strings_tab_photo_txt" xliff:restype="x-GENERIC/FACET/LARGE/ICON/SMALL">Photos</string>
<string name="party_share_strings_popup_menu_view_photo_txt" xliff:restype="x-GENERIC/POPUP/LIST/FIRST/V">View</string>
<string name="party_share_strings_add_song_button_txt" xliff:restype="x-GENERIC/ICS/FOOTER">Done</string>
<string name="party_share_strings_member_full_txt" xliff:restype="x-GENERIC/TOAST/TEXT">This party has already reached its max number of participants.</string>
<string name="party_share_strings_wifi_connecting_txt" xliff:restype="x-GENERIC/TOAST/TEXT">Connecting</string>
<string name="party_share_strings_join_connecting_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Connecting</string>
<string name="party_share_strings_join_requesting_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Your request is in progress</string>
<string name="party_share_strings_join_waiting_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Please wait</string>
<string name="party_share_strings_music_list_full_txt" xliff:restype="x-GENERIC/TOAST/TEXT">Max number of songs added.</string>
<string name="party_share_strings_volume_media_txt" xliff:restype="x-GENERIC/POPUP/TEXT/V">Music, video, games &amp; other media</string>
<string name="party_share_strings_music_list_no_photo_lead_txt" xliff:restype="x-UNLIMITED">No photos in the shared album. Try taking some photos or uploading from your collection.</string>
</resources>